@@ -1,5 +1,12 @@
 package tower.commands;
 
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
+
 import mindustry.entities.abilities.Ability;
 import mindustry.gen.Call;
 import mindustry.gen.Player;
@@ -7,29 +14,24 @@ import mindustry.gen.Unit;
 import mindustry.type.UnitType;
 import mindustry.ui.Menus;
 import tower.Bundle;
+import tower.Players;
 import tower.Domain.Abilities;
 import tower.Domain.PlayerData;
 import tower.Domain.UnitsTable;
-import tower.Players;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 public class Units {
     private static final Map<UnitType, Integer> unitPrices = new HashMap<>();
-    private static final Map<UnitType, String> unitNames = new HashMap<>();
+    private static int currentQuantity = 0;
+    private static int currentTotalPrice = 0;
+    private static UnitType currentUnitType = null;
+    private static Player currentPlayer = null;
+    private static boolean isMenuActive = false;
 
     public static void initUnitsTable() {
         for (Map<String, Object> unitMap : UnitsTable.units) {
             UnitType unitType = (UnitType) unitMap.get("unit");
-            String name = (String) unitMap.get("name");
             int price = (int) unitMap.get("price");
             price = (int) (price * 1.4);
-            unitNames.put(unitType, name);
             unitPrices.put(unitType, price);
         }
     }
@@ -38,7 +40,7 @@ public class Units {
         PlayerData playerData = Players.getPlayer(player);
         int price = unitPrices.get(unitType);
         if (playerData.getCash() >= price) {
-            playerData.subtractCash((float) price, player);
+            playerData.subtractCash((float) price);
 
             Unit spawned = unitType.spawn(player.x, player.y);
 
@@ -92,7 +94,7 @@ public class Units {
                 ScheduledExecutorService executor = Executors.newSingleThreadScheduledExecutor();
                 executor.schedule(() -> {
                     if (spawned.dead()) {
-                        playerData.addCash((float) price, player);
+                        playerData.addCash((float) price);
                         player.sendMessage(Bundle.get("unit.spawn.failed", player.locale));
                         player.sendMessage(Bundle.get("unit.died", player.locale));
                     }
@@ -100,7 +102,7 @@ public class Units {
 
                 player.sendMessage(Bundle.get("unit.brought", player.locale));
             } else {
-                playerData.addCash((float) price, player);
+                playerData.addCash((float) price);
                 player.sendMessage(Bundle.get("unit.spawn.failed", player.locale));
             }
         } else {
@@ -108,24 +110,39 @@ public class Units {
         }
     }
 
+    private static final int openTierMenuGui = Menus.registerMenu((player, option) -> {
+        if (option >= 0 && option < 6) {
+            openTierUnitsMenuGui(option, player);
+        } else {
+            player.sendMessage("Invalid selection. Please try again.");
+        }
+    });
+
     private static void openTierMenuGui(Player player) {
         String[][] buttons = new String[6][1];
         for (int i = 0; i < 6; i++) {
             buttons[i][0] = "[cyan]Tier " + i;
         }
-        Call.menu(player.con, Menus.registerMenu((player1, option) -> {
-            if (option >= 0 && option < 6) {
-                openTierUnitsMenuGui(option, player);
-            } else {
-                player.sendMessage("Invalid selection. Please try again.");
-            }
-        }), "Select Tier", "", buttons);
+        Call.menu(player.con, openTierMenuGui, "Select Tier", "", buttons);
     }
+
+    private static final int openTierMenuUnitsGui = Menus.registerMenu((player1, option) -> {
+        List<Map<String, Object>> tierUnits = UnitsTable.units.stream()
+                .filter(unit -> (int) unit.get("tier") == option)
+                .toList();
+        if (option >= 0 && option < tierUnits.size()) {
+            Map<String, Object> unitMap = tierUnits.get(option);
+            UnitType unitType = (UnitType) unitMap.get("unit");
+            openUnitMenuGui(unitType, player1);
+        } else {
+            player1.sendMessage("Invalid selection. Please try again.");
+        }
+    });
 
     private static void openTierUnitsMenuGui(int tier, Player player) {
         List<Map<String, Object>> tierUnits = UnitsTable.units.stream()
                 .filter(unit -> (int) unit.get("tier") == tier)
-                .collect(Collectors.toList());
+                .toList();
 
         String[][] buttons = new String[tierUnits.size()][1];
         for (int i = 0; i < tierUnits.size(); i++) {
@@ -134,61 +151,104 @@ public class Units {
             String name = (String) unitMap.get("name");
             buttons[i][0] = unitType.emoji() + " " + name;
         }
-        Call.menu(player.con, Menus.registerMenu((player1, option) -> {
-            if (option >= 0 && option < tierUnits.size()) {
-                Map<String, Object> unitMap = tierUnits.get(option);
-                UnitType unitType = (UnitType) unitMap.get("unit");
-                openUnitMenuGui(unitType, player);
-            } else {
-                player.sendMessage("Invalid selection. Please try again.");
-            }
-        }), "Select Unit", "", buttons);
+        Call.menu(player.con, openTierMenuUnitsGui, "Select Unit", "", buttons);
     }
+
+
     private static void openUnitMenuGui(UnitType unitType, Player player) {
         int price = unitPrices.get(unitType);
         String message = unitType.emoji() + "\n\n" +
                 Bundle.get("menu.units.info.health", player.locale) + " " + (int) unitType.health + "\n" +
                 Bundle.get("menu.units.info.armor", player.locale) + " " + (int) unitType.armor + "\n" +
                 Bundle.get("menu.units.info.price", player.locale) + " " + price;
-
-        int menu = Menus.registerMenu(((player1, option) -> {
-            switch (option) {
-                case 0 -> buyUnit(unitType, player, true); // Pass true to allow unit control
-                case 1 -> openTierMenuGui(player); // Go back to the tier selection menu
-                case 2 -> openQuantityAdjustmentMenu(unitType, player, 1); // New case for buying multiple units
-            }
-        }));
-
-        Call.menu(player.con, menu, Bundle.get("menu.units.title"), message, new String[][] {
+        Call.menu(player.con, openUnitMenuGui, Bundle.get("menu.units.title"), message, new String[][] {
                 { "[lime]Buy" },
                 { "[gray]Back" },
                 { "[blue]Buy Multiple" } // New option for buying multiple units
         });
     }
+    private static final int openUnitMenuGui = Menus.registerMenu(((player1, option) -> {
+        switch (option) {
+            case 0 -> buyUnit((UnitType) UnitsTable.units.get(option), player1, true); // Pass true to allow unit
+                                                                                       // control
+            case 1 -> openTierMenuGui(player1); // Go back to the tier selection menu
+            case 2 -> openQuantityAdjustmentMenu((UnitType) UnitsTable.units.get(option), player1, 1); // New case for
+                                                                                                       // buying
+                                                                                                       // multiple units
+        }
+    }));
 
-    private static void openQuantityAdjustmentMenu(UnitType unitType, Player player, int defaultQuantity) {
-        String title = "[red]Adjust Quantity";
-        String[][] buttons = new String[][] { { "-1", "0", "+1" }, { "[green]Buy", "[grey]Back", "[red]Close" } };
-        int price = unitPrices.get(unitType); // Assuming unitPrices is accessible and contains the price for each unit type
-        String message = "[green]Current Quantity: " + defaultQuantity + "\n[red]Total Price: " + (defaultQuantity * price);
-    
-        Call.menu(player.con, Menus.registerMenu((p, opt) -> {
-            if (opt < 3) { // Adjustment buttons
-                int adjustment = Integer.parseInt(buttons[0][opt]);
-                int currentQuantity = defaultQuantity + adjustment;
-                if (currentQuantity < 1) {
-                    player.sendMessage("[red]Quantity cannot be less than 1.");
-                    return;
+    private static final int quantityAdjustmentMenuId = Menus.registerMenu((player, option) -> {
+        if (!isMenuActive)
+            return; // Ignore inputs if the menu is not active
+
+        switch (option) {
+            case 0: // Increase quantity
+                currentQuantity++;
+                currentTotalPrice += unitPrices.get(currentUnitType);
+                break;
+            case 1: // Decrease quantity
+                if (currentQuantity > 0) {
+                    currentQuantity--;
+                    currentTotalPrice -= unitPrices.get(currentUnitType);
                 }
-                openQuantityAdjustmentMenu(unitType, player, currentQuantity);
-            } else if (opt == 3) { // Buy button
-                buyMultipleUnits(unitType, player, defaultQuantity);
-            } else if (opt == 4) { // Back button
-                openUnitMenuGui(unitType, player);
-            } else if (opt == 5) { // Close button
-                player.sendMessage("Purchase cancelled.");
-            }
-        }), title, message, buttons); // Pass the dynamic message to the menu
+                break;
+            case 2: // Buy
+                buyMultipleUnits(currentUnitType, currentPlayer, currentQuantity);
+                isMenuActive = false; // Deactivate the menu after purchase
+                break;
+            case 3: // Close
+                isMenuActive = false; // Deactivate the menu without purchasing
+                break;
+            case 4: // Back
+            openUnitMenuGui(currentUnitType, player);
+                isMenuActive = false;
+                break;
+        }
+
+        // Update the menu display
+        updateQuantityAdjustmentMenuDisplay(player);
+    });
+
+    private static void openQuantityAdjustmentMenu(UnitType unitType, Player player, int initialQuantity) {
+        if (isMenuActive)
+            return; // Prevent re-opening the menu if it's already active
+
+        currentUnitType = unitType;
+        currentPlayer = player;
+        currentQuantity = initialQuantity;
+        currentTotalPrice = unitPrices.get(unitType) * initialQuantity;
+        isMenuActive = true;
+        PlayerData playerData = PlayerData.get(player);
+        String[][] options = {
+                { "+1" },
+                { "-1" },
+                { "Buy" },
+                { "Close" },
+                { "Back" }
+        };
+        String message = "Current Quantity: " + currentQuantity + "\nTotal Price: " + currentTotalPrice
+                + "\nYour Cash: " + playerData.getCash();
+
+        Call.menu(quantityAdjustmentMenuId, "Quantity Adjustment Menu", message, options);
+    }
+
+    private static void updateQuantityAdjustmentMenuDisplay(Player player) {
+        if (!isMenuActive)
+            return;
+
+        String[][] options = {
+                { "+1" },
+                { "-1" },
+                { "Buy" },
+                { "Close" },
+                { "Back" }
+        };
+        PlayerData playerData = PlayerData.get(player);
+        String message = "Current Quantity: " + currentQuantity + "\nTotal Price: " + currentTotalPrice
+                + "\nYour Cash: " + playerData.getCash();
+
+        Call.menu(quantityAdjustmentMenuId, "Quantity Adjustment Menu", message, options);
     }
 
     private static void buyMultipleUnits(UnitType unitType, Player player, int quantity) {
@@ -197,14 +257,15 @@ public class Units {
 
         if (playerData.getCash() >= totalCost) {
             for (int i = 0; i < quantity; i++) {
-                buyUnit(unitType, player, false); // Pass false to prevent unit control
+                buyUnit(unitType, player, false);
             }
-            playerData.subtractCash(totalCost, player);
+            playerData.subtractCash(totalCost);
             player.sendMessage("[green]Units purchased successfully.");
         } else {
             player.sendMessage("[red]You don't have enough funds to buy " + quantity + " units.");
         }
     }
+
     public static void execute(Player player) {
         openTierMenuGui(player);
     }
